<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/Primary"
    tools:context=".view.HotelListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/PrimaryDark"
        android:layout_height="150dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatTextView>


        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatTextView>


        <Button
            android:id="@+id/btfiltro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/numeroDePersonas"
            android:text="Filtrar" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/fecha_entrada" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fechaSalidaEdit"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/direccion" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView17"
            android:layout_alignEnd="@+id/btfiltro"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/textView17"
            android:text="@string/filtros" />

        <EditText
            android:id="@+id/fechaEntradaEdit"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:layout_alignEnd="@+id/textView15"
            android:layout_alignBottom="@+id/btfiltro"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="70dp"
            android:ems="10"
            android:inputType="date"
            android:text="" />

        <EditText
            android:id="@+id/DireccionEdit"
            android:layout_width="169dp"
            android:layout_height="38dp"
            android:layout_below="@+id/textView"
            android:layout_alignStart="@+id/textView15"
            android:layout_alignBottom="@+id/btfiltro"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/btfiltro"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView15"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/textView15"
            android:text="@string/fecha_salida" />

        <EditText
            android:id="@+id/fechaSalidaEdit"
            android:layout_width="131dp"
            android:layout_height="52dp"
            android:layout_below="@+id/textView16"
            android:layout_alignStart="@+id/textView16"
            android:layout_alignEnd="@+id/textView16"
            android:layout_alignBottom="@+id/fechaEntradaEdit"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView16"
            android:layout_alignBottom="@+id/textView16"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/textView16"
            android:text="@string/personas" />

        <EditText
            android:id="@+id/numeroDePersonas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView17"
            android:layout_alignStart="@+id/textView17"
            android:layout_alignEnd="@+id/textView17"
            android:layout_alignBottom="@+id/fechaSalidaEdit"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:inputType="number"
            android:text="" />

        <Spinner
            android:id="@+id/filtrospinner"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView18"
            android:layout_alignEnd="@+id/textView18"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/numeroDePersonas" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reciclador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:scrollbars="vertical">

    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone">

    </ProgressBar>

</androidx.appcompat.widget.LinearLayoutCompat>